# backend/apidoc.yaml
@@ -307,6 +307,27 @@ paths:
 
 #           Bartenders Page       #
 
+    /getShiftsWorked:
+        post:
+          description: returns all shifts worked by this bartender
+          requestBody:
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    bar:
+                      type: string
+                    bartender:
+                      type: string
+          responses:
+            "200":
+              description: OK
+              schema:
+                type: array
+            "400":
+              description: Bad Request
+
     /getDaysWithShifts:
         post:
           description: Gives list of day at the bar we have shifts for
